# mikanos-rs

./: .gitignore  README.md  run.sh
boot/: Cargo.toml
boot/src/: fs.rs  main.rs
common/: Cargo.toml
common/src/: font.rs  lib.rs
devenv/: OVMF_VARS.fd  run_qemu.sh
elf_loader/: Cargo.toml
elf_loader/src/: lib.rs
elf_loader/src/parser/: mod.rs
elf_loader/src/parser/header/: eident.rs  etype.rs  mod.rs
elf_loader/src/parser/program/: mod.rs
elf_loader/src/parser/section/: mod.rs
elf_loader/src/types/: mod.rs
elf_loader/src/types/header/: eident.rs  emachine.rs  mod.rs
elf_loader/src/types/program/: mod.rs
elf_loader/src/types/section/: mod.rs
kernel/: Cargo.toml  kernel.elf  x86_64-unknown-none-elf.json
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  frame.rs  lib.rs  main.rs
kernel/src/console/: font.rs  mod.rs
memo/chapter1/: MEMO.md
memo/chapter2/: MEMO.md
memo/chapter5/: MEMO.md
tools/qemu/: OVMF_VARS.fd  run_image.sh
