[package]
name = "kernel_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.17.0", features = ["exts", "alloc"] }
uefi-services = "0.14.0"
uart_16550 = "0.2.0"
x86_64 = "0.14.2"

[dependencies.elf_loader]
path = "../elf_loader"
default-features = false

[dependencies.common]
path = "../common"
